Set folders architecture

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CatchTheDiv</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-8GXW1k6IsNxxUwqHhPSI9wM3XYs4dvuTbg&usqp=CAU" rel="icon" type="image/png">
 </head>
 <body>
@@ -29,5 +29,5 @@
 
 
 </body>
-<script src="main.js"></script>
+<script src="./services/main.js"></script>
 </html>
