Apply sass to style Add click to events

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="fails" id="fails"></div>
             </div>
             <div class="popUp" id="popUp">
-                <div class="popUpBackground" id="popUpBackground"></div>
-                <div class="popUpResult" id="popUpResult"></div>
+                <div class="popUp__background" id="popUpBackground"></div>
+                <div class="popUp__result" id="popUpResult"></div>
             </div>
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
@@ -29,5 +29,5 @@
 
 
 </body>
-<script src="./services/main.js"></script>
+<script src="./services/index.js"></script>
 </html>
