--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div id="baby1" class="baby1"></div>            
             <div id="baby2" class="baby2"></div>
             <div class="score" id="score">
-                <div class="hits" id="hits"></div>
-                <div class="fails" id="fails"></div>
+                <div class="score__hits" id="hits"></div>
+                <div class="score__fails" id="fails"></div>
             </div>
             <div class="popUp" id="popUp">
                 <div class="popUp__background" id="popUpBackground"></div>
