Add random icons that are display when alert is triggered

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
                 <div class="score__fails" id="fails"></div>
             </div>
             <div class="popUp" id="popUp">
-                <div class="popUp__background" id="popUpBackground"></div>
+                <!-- <div class="popUp__background" id="popUpBackground"></div> -->
                 <div class="popUp__result" id="popUpResult"></div>
             </div>
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
         <div class="errorScreen" id="errorScreen"></div>
+    </div>
+    <div class="menu" id="menu">
+        <div class="menu__background"></div>
+        <div class="menu__menu-box">
+
+        </div>
     </div>
 
 
