Remove redundant father html element Avoid strike functionality when attempt result is displayed Improve popup opacity style performance

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div id="father" class="father">
+    <!-- <div id="father" class="father"> -->
         <div id="son" class="son">
             <div id="baby1" class="baby1"></div>            
             <div id="baby2" class="baby2"></div>
@@ -25,7 +25,7 @@
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
         <div class="errorScreen" id="errorScreen"></div>
-    </div>
+    <!-- </div> -->
     <div class="menu" id="menu">
         <div class="menu__background"></div>
         <div class="menu__menu-box">
