Fix display hitCounter variable bug

--- a/index.html
+++ b/index.html
@@ -7,33 +7,28 @@
     <title>CatchTheDiv</title>
     <link rel="stylesheet" href="./style/style.css">
     <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-8GXW1k6IsNxxUwqHhPSI9wM3XYs4dvuTbg&usqp=CAU" rel="icon" type="image/png">
+    <script src="./services/index.js" defer></script>
 </head>
 <body>
-
-    <!-- <div id="father" class="father"> -->
-        <div id="son" class="son">
-            <div id="baby1" class="baby1"></div>          
-            <div id="baby2" class="baby2"></div>
-            <div class="score" id="score">
-                <div class="score__hits" id="hits"></div>
-                <div class="score__fails" id="fails"></div>
-            </div>
-            <div class="popUp" id="popUp">
-                <!-- <div class="popUp__background" id="popUpBackground"></div> -->
-                <div class="popUp__result" id="popUpResult"></div>
-            </div>
+    <div id="son" class="son">
+        <div id="baby1" class="baby1"></div>          
+        <div id="baby2" class="baby2"></div>
+        <div class="score" id="score">
+            <div class="score__hits" id="hits"></div>
+            <div class="score__fails" id="fails"></div>
+        </div>
+        <div class="popUp" id="popUp">
+            <!-- <div class="popUp__background" id="popUpBackground"></div> -->
+            <div class="popUp__result" id="popUpResult"></div>
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
-        <div class="errorScreen" id="errorScreen"></div>
-    <!-- </div> -->
+    </div>
+    <div class="errorScreen" id="errorScreen"></div>
     <div class="menu" id="menu">
         <div class="menu__background"></div>
         <div class="menu__menu-box">
 
         </div>
     </div>
-
-
 </body>
-<script src="./services/index.js"></script>
 </html>
