Rename baby id and class as children

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div id="son" class="son">
-        <div id="baby1" class="baby1"></div>          
-        <div id="baby2" class="baby2"></div>
+        <div id="children1" class="children1"></div>          
+        <div id="children2" class="children2"></div>
         <div class="score" id="score">
             <div class="score__hits" id="hits"></div>
             <div class="score__fails" id="fails"></div>
