--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./services/index.js" defer></script>
 </head>
 <body>
-    <div id="son" class="son">
+    <section id="son" class="son">
         <div id="children1" class="children1"></div>          
         <div id="children2" class="children2"></div>
         <div class="score" id="score">
@@ -22,13 +22,25 @@
             <div class="popUp__result" id="popUpResult"></div>
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
-    </div>
-    <div class="errorScreen" id="errorScreen"></div>
-    <div class="menu" id="menu">
+    </section>
+    <!-- <div class="errorScreen" id="errorScreen"></div> -->
+    <section class="menu" id="menu">
         <div class="menu__background"></div>
         <div class="menu__menu-box">
-
+            <div class="menu-box__background">
+                <div class="background__star">
+                    <span class="background__square"></span>
+                    <span class="background__square"></span>
+                </div>
+                <div class="background__star">
+                    <div class="background__square"></div>
+                    <div class="background__square"></div>
+                </div>
+            </div>
+            <div class="controls">
+                <button class="" type="button"></button>
+            </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
