Add handlers at menu

--- a/index.html
+++ b/index.html
@@ -23,22 +23,37 @@
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
     </section>
-    <!-- <div class="errorScreen" id="errorScreen"></div> -->
     <section class="menu" id="menu">
         <div class="menu__background"></div>
         <div class="menu__menu-box">
             <div class="menu-box__background">
-                <div class="background__star">
+                <div class="background">
                     <span class="background__square"></span>
                     <span class="background__square"></span>
                 </div>
-                <div class="background__star">
+                <div class="background">
                     <div class="background__square"></div>
                     <div class="background__square"></div>
                 </div>
             </div>
-            <div class="controls">
-                <button class="" type="button"></button>
+            <div class="menu-box__controls">
+                <div class="speed">
+                    <h3 class="speed__title">SPEED</h3>
+                    <div class="speed__selector-box">
+                        <button class="selector">Easy</button>
+                        <button class="selector">Normal</button>
+                        <button class="selector">Pro</button>
+                    </div>
+                </div>
+                <div class="colors">
+                    <h3 class="colors__title">COLOR</h3>
+                    <div class="colors__handler-box">
+                        <button class="colors__handler" type="button">Classic</button>
+                        <button class="colors__handler" type="button">Pastel</button>
+                        <button class="colors__handler" type="button">Code</button>
+                        <button class="colors__handler" type="button">Random</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
