Add listeners to color handlers

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <div class="colors">
                     <h3 class="colors__title">COLOR</h3>
                     <div class="colors__handler-box">
-                        <button class="colors__handler" type="button">Classic</button>
-                        <button class="colors__handler" type="button">Pastel</button>
-                        <button class="colors__handler" type="button">Code</button>
-                        <button class="colors__handler" type="button">Random</button>
+                        <button id="colorClassic" class="colors__handler" type="button">Classic</button>
+                        <button id="colorPastel" class="colors__handler" type="button">Pastel</button>
+                        <button id="colorCode" class="colors__handler" type="button">Code</button>
+                        <button id="colorRandom" class="colors__handler" type="button">Random</button>
                     </div>
                 </div>
             </div>
