Refactor async display launcher

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="popUp__result" id="popUpResult"></div>
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
+        <button id="openMenu" class="menu-handler--open">MENU</button>
     </section>
     <section class="menu" id="menu">
         <div class="menu__background"></div>
@@ -40,9 +41,9 @@
                 <div class="speed">
                     <h3 class="speed__title">SPEED</h3>
                     <div class="speed__selector-box">
-                        <button class="selector">Easy</button>
-                        <button class="selector">Normal</button>
-                        <button class="selector">Pro</button>
+                        <button id="speedEasy" class="selector">Easy</button>
+                        <button id="speedNormal" class="selector">Normal</button>
+                        <button id="speedPro" class="selector">Pro</button>
                     </div>
                 </div>
                 <div class="colors">
@@ -54,6 +55,7 @@
                         <button id="colorRandom" class="colors__handler" type="button">Random</button>
                     </div>
                 </div>
+                <button id="closeMenu" class="menu-handler--close">X</button>
             </div>
         </div>
     </section>
