Add conditional display to open menu handler

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
             <div class="score__fails" id="fails"></div>
         </div>
         <div class="popUp" id="popUp">
-            <!-- <div class="popUp__background" id="popUpBackground"></div> -->
             <div class="popUp__result" id="popUpResult"></div>
         </div>
         <div class="patchBabyHole" id="patchBabyHole"></div>
-        <button id="openMenu" class="menu-handler--open">MENU</button>
     </section>
+    <button id="openMenu" class="menu-handler--open">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </button>
     <section class="menu" id="menu">
         <div class="menu__background"></div>
         <div class="menu__menu-box">
