Replace variable names

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./services/index.js" defer></script>
 </head>
 <body>
-    <section id="son" class="son">
+    <section id="playBackground" class="playBackground">
         <div class="patchBabyHole" id="patchBabyHole"></div>
         <div id="children1" class="children1"></div>          
         <div id="children2" class="children2"></div>
